Ajuste imágen código

--- a/1.3-Intro-HTML/index.html
+++ b/1.3-Intro-HTML/index.html
@@ -11,7 +11,7 @@
     <p>Este es un segundo parrafo</p>
     <h2>H2</h2>
     <h3>Un H3</h3>
-    <img src="676356.jpg />
+    <img src="Assets\676356.jpg />
     <a href="https://www.google.com/">Buscar en google</a>
     <button>Soy un botón</button>
     <section>
