--- a/1.3-Intro-HTML/index.html
+++ b/1.3-Intro-HTML/index.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
 </head>
 <body>
-    <h1>Mi Primer Página Web</h1>
+    <h1 class="color-green">Mi Primer Página Web</h1>
     <p>Y este es un parrafo</p>
     <p>Este es un segundo parrafo</p>
-    <h2>H2</h2>
-    <h3>Un H3</h3>
+    <h2 class="color-green">H2</h2>
+    <h3 class="color-green">Un H3</h3>
     <img src="Assets\676356.jpg />
     <a href="https://www.google.com/">Buscar en google</a>
     <button>Soy un botón</button>
     <section>
         <ol>
-            <li>Elemento 1</li>
+            <li id="li importantisimo">Elemento 1</li>
             <li>Elemento 2</li>
             <li>elemento 3</li>
         </ol>
